--- a/MyFirstWebApp/appsettings.json
+++ b/MyFirstWebApp/appsettings.json
@@ -1,5 +1,8 @@
 {
-  
-   
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "DhftOSSuphk3vmCJQrexST1RsyjZBjXWRgJMFPU4",
+    "Issuer": "https://localhost:44391/",
+    "Audience": "https://localhost:44391/"
+  }
 }
