add wep api authBearer

--- a/MyFirstWebApp/MyFirstWebApp.csproj
+++ b/MyFirstWebApp/MyFirstWebApp.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00947" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="5.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
   </ItemGroup>
 
   <ItemGroup>
